fix: hidden scrollbar

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -10,6 +10,10 @@ body {
     @apply bg-shiny;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+}
+
 .item-menu-side{
     @apply flex flex-col items-center text-base gap-2 rounded-lg p-2 hover:bg-primary-blue font-medium hover:text-white;
 }
